<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_crear_cuenta"
    tools:context=".CrearCuenta">

    <TextView
        android:id="@+id/crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/crear_cuenta"
        android:textColor="@color/blanco"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_completo"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_cuenta" />

    <EditText
        android:id="@+id/edit_text_nombre_completo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_nombre_completo"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/nombre_completo" />

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombre_de_usuario"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_nombre_completo" />

    <EditText
        android:id="@+id/edit_text_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario" />

    <TextView
        android:id="@+id/correo_electronico_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/correo_electronico_crear_cuenta"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_nombre_usuario" />

    <EditText
        android:id="@+id/edit_text_correo_electronico_crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_correo_electronico"
        android:inputType="textWebEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/correo_electronico_crear_cuenta" />

    <TextView
        android:id="@+id/contrasena_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/contrasena_crear_cuenta"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_correo_electronico_crear_cuenta" />

    <EditText
        android:id="@+id/edit_text_contrasena_crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_constrasena_crear_cuenta"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/contrasena_crear_cuenta" />

    <TextView
        android:id="@+id/confirmar_contrasena_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirmar_contrasena_crear_cuenta"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_contrasena_crear_cuenta" />

    <EditText
        android:id="@+id/edit_text_confirmar_contrasena_crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_confirmar_contrasena_crear_cuenta"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/confirmar_contrasena_crear_cuenta" />

    <Button
        android:id="@+id/boton_crear_cuenta_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/boton_crear_cuenta_registrarse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_confirmar_contrasena_crear_cuenta" />


</androidx.constraintlayout.widget.ConstraintLayout>