<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSkyBlue"
    tools:context=".PantallaCrearActividad">

    <View
        android:id="@+id/fondo_crear_actividades"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lilaclaro"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crear_actividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/crear_actividad"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ir_a_pantalla_principal_boton_crear_actividad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton_pantalla_principal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/boton_para_ir_a_la_pantalla_principal" />

    <ImageButton
        android:id="@+id/boton_volver_atras_crear_actividad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/boton_volver_atras"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/boton_para_volver_atras" />

    <ImageButton
        android:id="@+id/boton_listo_crear_actividad"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="1dp"
        android:background="@drawable/boton_listo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/ya_se_termino_de_editar_para_agregar_una_actividad" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fondo_crear_actividades">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titulo_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/titulo_de_la_actividad"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_titulo_actividad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/blanco"
                android:hint="@string/edit_text_titulo_actividad"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/titulo_actividad"/>

            <TextView
                android:id="@+id/detalle_crear_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/detalles_crear_actividad"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_titulo_actividad" />

            <EditText
                android:id="@+id/edit_text_detalles_crear_actividad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/blanco"
                android:inputType="text"
                android:maxLines="15"
                android:minLines="5"
                android:hint="@string/edit_text_detalles_actividad"
                app:layout_constraintTop_toBottomOf="@id/detalle_crear_actividad" />

            <TextView
                android:id="@+id/fecha_crear_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/fecha_crear_actividad"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_detalles_crear_actividad" />

            <EditText
                android:id="@+id/edit_text_fecha_crear_actividad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/blanco"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/selecciona_el_dia"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/fecha_crear_actividad" />

            <TextView
                android:id="@+id/hora_inicial_crear_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_inicial_crear_actividad"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_fecha_crear_actividad"/>

            <EditText
                android:id="@+id/edit_text_hora_inicial"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/blanco"
                android:clickable="false"
                android:focusable="false"
                android:inputType="time"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_text_hora_inicial_crear_actividad"
                app:layout_constraintTop_toBottomOf="@id/hora_inicial_crear_actividad" />

            <TextView
                android:id="@+id/hora_final_crear_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_final_crear_actividad"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_hora_inicial"/>

            <EditText
                android:id="@+id/edit_text_hora_final"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/blanco"
                android:clickable="false"
                android:focusable="false"
                android:inputType="time"
                android:layout_marginEnd="20dp"
                android:hint="@string/edit_text_hora_final_crear_actividad"
                app:layout_constraintTop_toBottomOf="@id/hora_final_crear_actividad" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>