<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla_iniciar_sesion"
    tools:context=".IniciarSesion">

    <TextView
        android:id="@+id/iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/blanco"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/nombre_o_usuario"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iniciar_sesion" />

    <EditText
        android:id="@+id/edit_text_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_nombre_o_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario" />

    <TextView
        android:id="@+id/correo_electronico_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/correo_electronico_iniciar_sesion"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_nombre_usuario" />


    <EditText
        android:id="@+id/edit_text_correo_electronico_iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blanco"
        android:hint="@string/edit_text_correo_electronico_iniciar_sesion"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_electronico_iniciar_sesion"
        android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/contrasena_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/contrasena_iniciar_sesion"
            android:textColor="@color/blanco"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_correo_electronico_iniciar_sesion"/>


        <EditText
            android:id="@+id/edit_text_contrasena"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/blanco"
            android:hint="@string/edit_text_contrasena_iniciar_sesion"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/contrasena_iniciar_sesion" />

        <Button
            android:id="@+id/boton_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillo"
            android:text="@string/boton_iniciar_sesion"
            android:textColor="@color/lila"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_contrasena"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/boton_crear_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boton_iniciar_sesion"
            android:layout_marginTop="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
