<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/fondo_actividad_actividades"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulo_actividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/titulo"
                android:textColor="@color/negro"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/blanco"
                android:text="@string/fecha"
                android:textSize="20sp"
                android:textColor="@color/plomoOscuro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/boton_eliminar_actividad"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/boton_eliminar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hora_inicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@color/blanco"
                android:text="@string/hora_inicial"
                android:textSize="20sp"
                android:textColor="@color/plomoOscuro"
                app:layout_constraintRight_toLeftOf="@+id/boton_eliminar_actividad"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/flecha_abajo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/flecha_abajo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/boton_eliminar_actividad" />

            <TextView
                android:id="@+id/hora_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:background="@color/blanco"
                android:text="@string/hora_final"
                android:textSize="20sp"
                android:textColor="@color/plomoOscuro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/boton_eliminar_actividad" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>